# rag-personal-assistant

./: .gitignore  =2.0.2  LICENSE  README.md  pyproject.toml  users.db
src/: actions.py  embeddings.py  gemini_client.py  ingest.py  rag_app.py  user_store.py  voice.py
